fix(swiper-scrollbar): change position and width on mobile

--- a/src/styles/sections/hero-home.scss
+++ b/src/styles/sections/hero-home.scss
@@ -66,6 +66,6 @@
 
 	&__slider {
 		display: grid;
-		gap: 28px;
+		padding-block-end: 28px;
 	}
 }
